[package]
name = "exun"
version = "0.2.0"
authors = ["Mica White <botahamec@outlook.com>"]
edition = "2018"
rust-version = "1.41.1"
description = "Handle unexpected errors"
readme = "README.md"
documentation = "https://docs.rs/exun"
repository = "https://github.com/botahamec/exun/"
license = "0BSD"
keywords = ["no_std", "no-std", "utility", "error", "error-handling"]
categories = ["rust-patterns", "no-std"]
exclude = [".vscode/settings.json", ".github/pull_request_template.md"]

[package.metadata]
msrv = "1.41.1"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
